[package]
name = "maswali"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8.5"
serde_json = "1.0.117"

[dev-dependencies]
criterion = "0.5.1"
rustfmt = "0.10"

[workspace.lints.clippy]
all = { level = "deny", priority = -100 }
restriction = { level = "deny", priority = -100 }
pedantic = { level = "deny", priority = -100 }
nursery = { level = "deny", priority = -100 }
cargo = { level = "deny", priority = -100 }
