
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/learning_clap", "crates/mango-simulation", "crates/rust_exercises/basic_calculator/if_else", "crates/rust_exercises/basic_calculator/integers", "crates/rust_exercises/basic_calculator/panics", "crates/rust_exercises/basic_calculator/variables"]

exclude = []

# new crates created should not create their own .git
[cargo-new]
vcs = "none"

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["pgdev"]
repository = "https://github.com/paulgsc/server"
homepage = "https://maishatu.com/"
license = "MIT"
edition = "2021"

[workspace.dependencies]
