
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [ "crates/dsa","crates/learning_clap", "crates/leetcode/_3258", "crates/leetcode/_3259_energy_boost", "crates/leetcode/_3264_final_arr_state", "crates/leetcode/car_pooling", "crates/leetcode/fraction_calculator", "crates/leetcode/lru", "crates/leetcode/max_robots_2398", "crates/leetcode/min_distinct", "crates/leetcode/n_ary_tree", "crates/leetcode/palindrome_permutation_ii", "crates/leetcode/stack_queues_225", "crates/leetcode/ways_to_buy", "crates/mango-simulation", "crates/rust_exercises/basic_calculator/_for", "crates/rust_exercises/basic_calculator/_while", "crates/rust_exercises/basic_calculator/factorial", "crates/rust_exercises/basic_calculator/if_else", "crates/rust_exercises/basic_calculator/integers", "crates/rust_exercises/basic_calculator/panics", "crates/rust_exercises/basic_calculator/variables", "crates/tokio_tutorial"]

exclude = []

# new crates created should not create their own .git
[cargo-new]
vcs = "none"

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["pgdev"]
repository = "https://github.com/paulgsc/server"
homepage = "https://maishatu.com/"
license = "MIT"
edition = "2021"

[workspace.dependencies]
